samples/_failures_safe/1761415261_240a29_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_084648fb.c: In function ‘main’:
./samples/SAFE/__tmp_084648fb.c:140:9: error: expected declaration or statement at end of input
  140 |         printf("Memory allocation failed\n");
      |         ^~~~~~
./samples/SAFE/__tmp_084648fb.c:140:9: error: expected declaration or statement at end of input
